# markdown-it-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: codecov.yml  deps.yml  pages.yml  python-publish.yml  tests.yml
benchmarks/: Cargo.toml  test-file.rs
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/python/markdown_it_rs_py/: __init__.py  __init__.pyi
bindings/python/src/: ast.rs  builder.rs  lib.rs  markdown_it_py.rs  options.rs  plugin_registry.rs  plugin_state.rs  plugins.rs  rules.rs  types.rs
bindings/python/src/plugins/: builtin.rs  frontmatter.rs  linkify.rs  syntect.rs  typographer.rs
bindings/python/tests/: test_api.py
crates/markdown-it-url/: Cargo.toml  README.md
crates/markdown-it-url/src/: authority.rs  display.rs  elide.rs  host.rs  lib.rs  normalize.rs  parse.rs  percent.rs  urlencode.rs
demo/: Cargo.toml  package.json  webpack.config.js
demo/src/: index.pug  lib.rs  sample.md
examples/directives/: container.rs  css.rs  leaf.rs  main.rs  text.rs
examples/ferris/: core_rule.rs
examples/syntect/: main.rs
src/: bin.rs
src/common/: mod.rs  ruler.rs  sourcemap.rs  typekey.rs  utils.rs
src/generics/inline/: code_pair.rs  emph_pair.rs  full_link.rs
src/parser/: extset.rs  linkfmt.rs  main.rs  node.rs  renderer.rs
src/parser/block/: mod.rs  rule.rs
src/parser/block/builtin/: block_parser.rs
src/parser/core/: rule.rs
src/parser/inline/: mod.rs  rule.rs
src/parser/inline/builtin/: inline_parser.rs  mod.rs  skip_text.rs
src/plugins/: sourcepos.rs
src/plugins/cmark/block/: blockquote.rs  code.rs  fence.rs  heading.rs  hr.rs  lheading.rs  list.rs  paragraph.rs  reference.rs
src/plugins/cmark/inline/: autolink.rs  entity.rs  escape.rs  newline.rs
src/plugins/extra/: beautify_links.rs  directives.rs  footnote.rs  front_matter.rs  heading_anchors.rs  linkify.rs  math.rs  mod.rs  smartquotes.rs  syntect.rs  tables.rs  tasklist.rs  typographer.rs
src/plugins/html/: html_block.rs  html_inline.rs
src/plugins/html/utils/: blocks.rs
tests/: directives.rs  extras.rs  footnote.rs  front_matter.rs  markdown-it.rs  math.rs  pathological.rs  sourcemaps.rs
