[package]
name = "markdown-it-benchmarks"
version = "0.0.0"
license = "MIT"
edition = "2021"
publish = false

[dependencies]
comrak = "0.52"
criterion = "0.8"
markdown-it-rs = { path = "../" }
markdown-it-v6 = { package = "markdown-it", version = "0.6" }

[[bench]]
name = "test-file"
path = "test-file.rs"
harness = false
